refactofing and Allure added