@@ -4,56 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>lubnin-learning</artifactId>
-        <groupId>otusqa</groupId>
+        <groupId>com.otus</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>selenium</artifactId>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>3.0.0-M3</version>-->
-<!--                <dependencies>-->
-<!--                    <dependency>-->
-<!--                        <groupId>org.apache.maven.surefire</groupId>-->
-<!--                        <artifactId>surefire-junit47</artifactId>-->
-<!--                        <version>3.0.0-M3</version>-->
-<!--                    </dependency>-->
-<!--                </dependencies>-->
-<!--                <configuration>-->
-<!--                    <includes>-->
-<!--                        <include>**/*.java</include>-->
-<!--                    </includes>-->
-<!--                    <parallel>all</parallel>-->
-<!--                    <threadCount>100</threadCount>-->
-<!--                    <rerunFailingTestsCount>1</rerunFailingTestsCount>-->
-<!--                    <forkCount>10</forkCount>-->
-<!--                    <parallel>methods</parallel>-->
-<!--                    <threadCountMethods>4</threadCountMethods>-->
-<!--                    <reuseForks>true</reuseForks>-->
-<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-<!--                    <systemPropertyVariables>-->
-<!--                        <fNumber>${surefire.forkNumber}</fNumber>-->
-<!--                    </systemPropertyVariables>-->
-<!--                    <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </build>-->
-
 </project>
